--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,12 +9,12 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
-  <title>Alura Docs</title>
+  <title>Documentos para estudo</title>
 </head>
 
 <body class="col-lg-6 mt-3 mx-auto">
   <header>
-    <h1 class="text-center display-2 mb-4">AluraDocs</h1>
+    <h1 class="text-center display-2 mb-4">Documentos para estudo</h1>
   </header>
 
   <main class="w-75 mx-auto">
